--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,6 @@
 ﻿@{  ViewBag.Title = "Character Sheet - KnockoutJS Demo"; }
 
-
-@*<script src="~/Scripts/knockout-3.5.0.js"></script>*@
-
-
-<div class="container mt-5 text-datk">
+<div class="container mt-5 text-dark">
     <div class="row">
         <div class="col-sm">
             <label> Character Name: </label>
@@ -18,11 +14,11 @@
                 </div>
                 <div class="form-group col-sm">
                     <label for="classInput">Class</label>
-                    <input id="classInput" class="form-control" data-bind="class" />
+                    <select id="classInput" class="form-control" data-bind="options: classOptions, value: charClass, optionsText: 'name'"></select>
                 </div>
                 <div class="form-group col-2">
                     <label for="levelInput">Level</label>
-                    <input id="levelInput" class="form-control w-100" data-bind="level" />
+                    <input id="levelInput" type="number" class="form-control w-100" data-bind="numeric, value: level" data-default="1"/>
                 </div>
             </div>
         </div>
@@ -31,8 +27,8 @@
     @* Attributes *@
     <div class="row my-4" data-bind="foreach: attributes">
         <div class="col text-center">
-            <div class="font-weight-bold text-uppercase text-primary" data-bind="text:name"></div>
-            <input class="form-control w-50 text-center mx-auto" data-bind="value:value"/>
+            <div class="font-weight-bold text-uppercase text-primary" data-bind="text:name, css: { raceBonus: raceBonus() > 0 }"></div>
+            <input class="form-control w-50 text-center mx-auto" data-bind="numeric, value:value" type="number" value="10" data-default="10"/>
             <div data-bind="text:modifier"></div>
         </div>
     </div>
@@ -44,7 +40,7 @@
             <div data-bind="foreach: skills">
                 <div class="m-1 py-1 row border-bottom border-warning">
                     <div class="col-2 float-left text-right" data-bind="text:value"></div>
-                    <div class="col-7 p-0 float-left" data-bind="text: name"></div>
+                    <div class="col-7 p-0 float-left" data-bind="text: name, css: { proficient: proficiency() == true }"></div>
                     <div class="col float-left text-muted"  data-bind="text: attributeDisplay"></div>
                 </div>
             </div>
@@ -63,7 +59,7 @@
                 </div>
                 <div class="col text-center">
                     <div class="font-weight-bold text-uppercase text-primary">Speed</div>
-                    <div class="w-50 text-center mx-auto" data-bind="text: speed"></div>
+                    <div class="w-50 text-center mx-auto" data-bind="text: speedValue"></div>
                 </div>
                 <div class="col text-center">
                     <div class="font-weight-bold text-uppercase text-primary">Initiative</div>
@@ -72,42 +68,44 @@
             </div>
 
             @* Weapons *@
-            <div class="row">
+            <div class="row mt-5" >
                 <div class="col">
                     <h3 class="bg-danger text-center pb-1 text-light">Weapons</h3>
-                    <div class="row border-bottom mb-1">
+                    <div class="row border-bottom m-1">
                         <div class="col text-center py-1">Weapon Name</div>
                         <div class="col text-center py-1">Attribute</div>
                         <div class="col text-center py-1">Attack Bonus</div>
                         <div class="col text-center py-1">Damage Roll</div>
                     </div>
                     <div data-bind="foreach: weapons">
-                        <div class="row ml-1 border-bottom mb-1">
+                        <div class="row m-1 py-2 border-bottom ">
                             <select class="col float-left form-control" data-bind="options: weaponOptions, value: weapon, optionsText: 'name'"></select>
                             <div class="col text-center py-1" data-bind="text: attribute"></div>
                             <div class="col text-center py-1" data-bind="text:atkBonus"></div>
                             <div class="col text-center py-1" data-bind="text:dmgRoll"></div>
                         </div>
                     </div>
-                    <button data-bind="click: addWeapon">Add Weapon</button>
+                    <button class="btn btn-danger mt-2 ml-1" data-bind="click: addWeapon">Add Weapon</button>
                 </div>
             </div>
 
             @* Armor *@
-            <div class="row mt-3">
+            <div class="row mt-4 pt-4">
                 <div class="col">
-                    <h3 class="bg-danger text-center pb-1 text-light">Armor</h3>
-                    <div class="row border-bottom mb-1">
+                    <h3 class="bg-success text-center pb-1 text-light">Armor</h3>
+                    <div class="row border-bottom m-1">
                         <div class="col text-center py-1">Armor Type</div>
                         <div class="col text-center py-1">Armor Class</div>
                         <div class="col text-center py-1">Notes</div>
                     </div>
-                    <div data-bind="foreach: armorInfo">
-                        <div class="row ml-1 border-bottom mb-1">
-                            <select class="col float-left form-control" data-bind="options: armorOptions, value: armor, optionsText:'name'"></select>
-                            <div class="col text-center py-1" data-bind="text: ac"></div>
-                            <div class="col text-center py-1" data-bind="text: notes"></div>
-                        </div>
+                    <div class="row m-1 py-2 border-bottom">
+                        <select class="col float-left form-control" data-bind="options: armorOptions, value: armor, optionsText:'name'"></select>
+                        <div class="col text-center py-1" data-bind="text: ac"></div>
+                        <div class="col text-center py-1" data-bind="text: armorNotes"></div>
+                    </div>
+                    <div class="row m-1 py-2 pl-4">
+                        <input class="form-check-input" type="checkbox" data-bind="checked: shield" id="shieldCheck"/>
+                        <label class="form-check-label" for="shieldCheck">Shield Equipped</label>
                     </div>
                 </div>
             </div>
@@ -119,19 +117,46 @@
 
 
 <script>
+    // If input is left blank, will return to default value
+    ko.bindingHandlers.numeric = {
+        init: function (element, valueAccessor) {
+            $(element).change(function () {
+                if ($(this).val() == "") {
+                    $(this).val($(this).data('default'));
+                }
+            });
+        }
+    };
+
+    // Main Character Model
     function CharacterViewModel() {
         var self = this;
         self.name = ko.observable();
-        self.race = ko.observable();
-        self.level = ko.observable();
-        self.class = ko.observable();
+        self.level = ko.observable(1);
         self.profBonus = 2;
 
-        //Todo: convert to observable based on class selection
-        self.hitPoints = 5; 
+        // Race Information
+        self.raceOptions = [
+            { name: "Human", speed: 35, statMod: { Strength: 1, Dexterity: 1, Constitution: 1, Intelligence: 1, Wisdom: 1, Charisma: 1 } },
+            { name: "Elf", speed: 30, statMod: { Dexterity: 2, Intelligence: 2 } },
+            { name: "Dwarf", speed: 25, statMod: { Strength: 2, Constitution: 2 } }
+        ];
+        self.race = ko.observable(raceOptions[0]);
+
+        // Class Information
+        self.classOptions = [
+            { name: "Fighter", hitPoints: 12, hpPerLevel: 4, proficiency: ["Athetics", "Intimidation", "Survival"] },
+            { name: "Wizard", hitPoints: 8, hpPerLevel: 2, proficiency: ["Arcana", "Investigation", "Perception"] },
+            { name: "Rogue", hitPoints: 4, hpPerLevel: 1, proficiency: ["Deception", "Stealth", "Sleight of Hand"] }
+        ];
+        self.charClass = ko.observable(classOptions[0]);
 
         self.attributes = $.map(charAttributes, function (name) { return new Attribute(name) });
         self.skills = $.map(charSkills, function (skill) { return new Skill(skill) });
+
+        self.proficiency = ko.pureComputed(function (attribute) {
+            if (attribute.proficiency()) { return "proficient" };
+        }, self.attributes);
 
         // Weapon Selection and Information
         self.weaponOptions = [
@@ -150,28 +175,58 @@
             { name: "Scale Mail", acValue: 13, dexMax: 2, stealthDisadvantage: true },
             { name: "Chain Mail", acValue: 14, dexmax: "none", stealthDisadvantage: true }
         ];
-        self.armorInfo = ko.observableArray([new Armor(self.armorOptions[0])]);
+        self.armor = ko.observable(armorOptions[0]);
+        self.shield = ko.observable();
+        self.ac = ko.computed(function () {
+            return armor().acValue;
+        }, this);
         self.armorClass = ko.computed(function () {
-            return self.armorInfo()[0].ac();
+            var maxDex = this.armor().dexMax;
+            var dexMod = self.attributes.find(x => x.name === "Dexterity").modifier()
+            var acBase = parseFloat(this.armor().acValue);
+            var shieldMod = 0;
+            if (self.shield()) {
+                shieldMod = 2;
+            }
+
+            if (maxDex == "none") {
+                dexMod = 0;
+            } else if (dexMod > maxDex) {
+                dexMod = maxDex;
+            } 
+            return acBase + dexMod + shieldMod;
+            
         }, this);
 
-        // Race Information
-        self.raceOptions = [
-            { name: "Human", speed: 35, statMod: [1, 1, 1, 1, 1, 1] },
-            { name: "Elf", speed: 30, statMod: [0, 0, 2, 1, 0, 0] },
-            { name: "Dwarf", speed: 25, statMod: [2, 2, 0, 0, 0, 0] }
-        ];
-        self.raceInfo = ko.observableArray([new RaceStats(self.raceOptions[0])]);
+        self.armorNotes = ko.computed(function () {
+            if (this.armor().stealthDisadvantage) {
+                return "Disadvantage on Stealth";
+            } else {
+                return "-"
+            }
+        }, this);
+
+
+
+   
 
         // Other Character Information
+
             // Initiative Based on Character Attributes
         self.initiative = ko.computed(function () {
             return self.attributes.find(x => x.name === "Dexterity").modifier();
         }, this);
 
             // Speed based on Race Selection
-        self.speed = ko.computed(function () {
-            return self.raceInfo()[0].speed();
+        self.speedValue = ko.computed(function () {
+            return self.race().speed;
+        }, this);
+
+            // Hitpoints based on Class Selection
+        self.hitPoints = ko.computed(function () {
+            var baseHp = parseInt(self.charClass().hitPoints);
+            var addedHp = parseInt(self.level()) * parseInt(self.charClass().hpPerLevel);
+            return baseHp + addedHp;
         }, this);
     };
 
@@ -186,10 +241,17 @@
 
     // Define attribute array
     function Attribute(name) {
-        this.name = name,
-        this.value = ko.observable(10),
+        this.name = name;
+        this.value = ko.observable(10);
+        this.raceBonus = ko.computed(function () {
+            if (Object.keys(self.race().statMod).includes(this.name)) {
+                return self.race().statMod[this.name];
+            } else {
+                return 0;
+            }
+        }, this);
         this.modifier = ko.computed(function () {
-            return Math.floor((this.value() - 10) / 2);
+            return Math.floor((this.value() - 10) / 2) + this.raceBonus();
         }, this);
     }
 
@@ -198,14 +260,21 @@
         this.name = skill.name;
         this.attribute = skill.attribute;
         this.attributeDisplay = "(" + this.attribute.substring(0, 3) + ")";
-        this.proficiency = false;
+
+        this.proficiency = ko.computed(function () {
+            if (self.charClass().proficiency.includes(this.name)) {
+                return true
+            } else {
+                return false
+            };
+        }, this);
+
         this.value = ko.computed(function () {
-            if (this.proficiency) {
+            if (this.proficiency()) {
                 var profBonus = self.profBonus;
             } else {
                 var profBonus = 0;
             }
-            var attr = this.attribute;
             return parseInt(self.attributes.find(x => x.name === this.attribute).modifier()) + profBonus;
         }, this);
     }
@@ -252,7 +321,7 @@
             }
         }, this);
 
-        this.notes = ko.computed(function () {
+        this.armorNotes = ko.computed(function () {
             if (this.armor().stealthDisadvantage) {
                 return "Disadvantage on Stealth";
             } else {
@@ -293,6 +362,11 @@
         longbow: { name: "Longbow", attribute: "Dexterity", damageDice: "1d8", damageType: "piercing" }
     }
 
+
+
     ko.applyBindings(CharacterViewModel);
+
+
+
 
 </script>
